<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blinkt_py</name>
  <version>0.0.0</version>
  <description>Python bindings to blinkt_interface.</description>
  <maintainer email="jpace121@gmail.com">jimmy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>blinkt_interface</build_depend>
  <build_depend>pybind11</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
